Implemented sending email

--- a/CareerConnect/CareerConnect.Server/appsettings.json
+++ b/CareerConnect/CareerConnect.Server/appsettings.json
@@ -12,6 +12,13 @@
       "ClientId": "937265656787-unp24ld8lqsjbu8jh3rvmjct1i0d66ei.apps.googleusercontent.com"
     }
   },
+  "Email": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": "587",
+    "SenderEmail": "ramonabergling@gmail.com",
+    "SenderPassword": "oaef vmpo awhf yeql",
+    "SenderName": "CareerConnect"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
