Bug 1 - Facebook login

--- a/CareerConnect/CareerConnect.Server/appsettings.json
+++ b/CareerConnect/CareerConnect.Server/appsettings.json
@@ -10,6 +10,20 @@
   "Authentication": {
     "Google": {
       "ClientId": "937265656787-unp24ld8lqsjbu8jh3rvmjct1i0d66ei.apps.googleusercontent.com"
+    },
+    "Facebook": {
+      "AppId": "25212061275130005",
+      "AppSecret": "79aeef25844191b5f587a18f9450182f"
+    },
+    "Twitter": {
+      "ClientId": "YOUR_TWITTER_CLIENT_ID",
+      "ClientSecret": "YOUR_TWITTER_CLIENT_SECRET",
+      "RedirectUri": "https://localhost:7081/api/auth/twitter-callback"
+    },
+    "LinkedIn": {
+      "ClientId": "YOUR_LINKEDIN_CLIENT_ID",
+      "ClientSecret": "YOUR_LINKEDIN_CLIENT_SECRET",
+      "RedirectUri": "https://localhost:7081/api/auth/linkedin-callback"
     }
   },
   "Email": {
