--- a/CareerConnect/CareerConnect.Server/appsettings.json
+++ b/CareerConnect/CareerConnect.Server/appsettings.json
@@ -21,9 +21,9 @@
       "RedirectUri": "https://localhost:7081/api/auth/twitter-callback"
     },
     "LinkedIn": {
-      "ClientId": "YOUR_LINKEDIN_CLIENT_ID",
-      "ClientSecret": "YOUR_LINKEDIN_CLIENT_SECRET",
-      "RedirectUri": "https://localhost:7081/api/auth/linkedin-callback"
+      "ClientId": "77qbiu7uucxtzn",
+      "ClientSecret": "WPL_AP1.q2nKQGVNaLnMhPiT.zWn+HA==",
+      "RedirectUri": "https://localhost:52623"
     }
   },
   "Email": {
